--- a/src/WebApplication/Views/Home/Index.cshtml
+++ b/src/WebApplication/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     ViewData["Title"] = "Hello World!";
 }
 
@@ -8,7 +8,7 @@
             <img class="newappIcon" src="/images/newapp-icon.png">
         </td>
         <td>
-            <h1 id="message">Hello World!</h1>
+            <h1 id="message">Hello Paris!</h1>
             <p class='description'></p> Thank you for creating an <span class="blue">ASP.NET Core Starter Application</span>.
         </td>
     </tr>
